--- a/content/community/devchangelog.adoc
+++ b/content/community/devchangelog.adoc
@@ -11,6 +11,12 @@ The official https://github.com/clojure/clojure/blob/master/changes.md[changelog
 
 == Release 1.10
 
+=== 1.10.0-beta4 (Oct 22, 2018)
+
+1.10.0-beta4 includes the following changes since 1.10.0-beta3:
+
+* https://dev.clojure.org/jira/browse/CLJ-2417[CLJ-2417] sort and sort-by should retain meta
+
 === 1.10.0-beta3 (Oct 12, 2018)
 
 1.10.0-beta3 includes the following changes since 1.10.0-RC1:
