--- a/content/community/contributing.adoc
+++ b/content/community/contributing.adoc
@@ -42,6 +42,7 @@ See the full <<contributors#,list of contributors>> that have signed the Clojure
 * Alex Osborne
 * Alex Ott
 * Alex Redington
+* Alexander Kiel
 * Alexander Taggart
 * Alexander Yakushev
 * Alf Kristian Stoyle
@@ -54,6 +55,7 @@ See the full <<contributors#,list of contributors>> that have signed the Clojure
 * Anthony Grimes
 * Aspasia Beneti
 * Baishampayan Ghose
+* Ben Bader
 * Ben Smith-Mannschott
 * Benjamin Teuber
 * Blake West
@@ -64,6 +66,7 @@ See the full <<contributors#,list of contributors>> that have signed the Clojure
 * Brian Taylor
 * Bruce Adams
 * Cameron Desautels
+* Cezary Kosko
 * Chad Taylor
 * Chas Emerick
 * Chris Gray
@@ -92,6 +95,7 @@ See the full <<contributors#,list of contributors>> that have signed the Clojure
 * Eli Lindsey
 * Eric Schoonover
 * Erik Assum
+* Eugene Kostenko
 * Federico Brubacher
 * Frantisek Sodomka
 * Gabriel Horner
@@ -99,6 +103,7 @@ See the full <<contributors#,list of contributors>> that have signed the Clojure
 * George Jahad
 * Gerrit Jansen Van Vuuren
 * Ghadi Shayban
+* Gijs Stuurman
 * Gordon Syme
 * Greg Leppert
 * Herwig Hochleitner
@@ -124,6 +129,7 @@ See the full <<contributors#,list of contributors>> that have signed the Clojure
 * Kevin Downey
 * Konrad Hinsen
 * Kurt Harriger
+* Kwang Yul Seo
 * Laurent Petit
 * Lauri Pesonen
 * Lee Yen-Chin
@@ -131,6 +137,7 @@ See the full <<contributors#,list of contributors>> that have signed the Clojure
 * Mark Simpson
 * Matt Revelle
 * Matthew Boston
+* Matthew Gilliard
 * Max Penet
 * Meikel Brandmeyer
 * Micah Martin
@@ -160,7 +167,9 @@ See the full <<contributors#,list of contributors>> that have signed the Clojure
 * Ruslan Al-Fakikh
 * Russ Olsen
 * Scott Lowe
+* Sean Corfield
 * Sean Devlin
+* Sebastien Martel
 * Shogo Ohta
 * Stefan Kamphausen
 * Steffen Dienst
