--- a/content/community/devchangelog.adoc
+++ b/content/community/devchangelog.adoc
@@ -11,6 +11,16 @@ The official https://github.com/clojure/clojure/blob/master/changes.md[changelog
 
 == Release 1.10
 
+=== 1.10.0-beta5 (Nov 6, 2018)
+
+Changes in 1.10.0-beta5:
+
+* In addition to prior methods of extension, values can now extend protocols by adding metadata where keys are fully-qualified symbols naming protocol functions and values are function implementations. Protocol implementations are checked first for direct definitions (defrecord, deftype, reify), then metadata definitions, then external extensions (extend, extend-type, extend-protocol). datafy has been updated to use this mechanism.
+* `symbol` can now be passed vars or keywords to obtain the corresponding symbol
+* https://dev.clojure.org/jira/browse/CLJ-2420[CLJ-2420] - error reporting enhancements - more refined phase reporting, new clojure.main/ex-triage split out of clojure.main/ex-str, execution errors now report the top *user* line in the stack trace omitting frames from core, enhancements to providing file and line via meta on a form
+* https://dev.clojure.org/jira/browse/CLJ-2425[CLJ-2425] add java 11 javadoc url
+* https://dev.clojure.org/jira/browse/CLJ-2424[CLJ-2424] fix test bug from https://dev.clojure.org/jira/browse/CLJ-2417[CLJ-2417]
+
 === 1.10.0-beta4 (Oct 22, 2018)
 
 1.10.0-beta4 includes the following changes since 1.10.0-beta3:
