--- a/content/community/downloads.adoc
+++ b/content/community/downloads.adoc
@@ -12,14 +12,14 @@ ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 * See: <<xref/../../guides/getting_started#,Getting Started>>
 * https://repo1.maven.org/maven2/org/clojure/clojure/1.9.0/[Clojure 1.9.0]
 * https://github.com/clojure/clojure/blob/master/changes.md[Changelog]
-* Requirements: Java 1.6+ (recommended: Java 1.8+)
+* Requirements: Java 6 or higher (recommended: Java 8 or Java 11)
 
-== Development Release: 1.10.0-beta4 (Oct 22, 2018)
+== Development Release: 1.10.0-beta5 (Nov 6, 2018)
 
-* https://repo1.maven.org/maven2/org/clojure/clojure/1.10.0-beta4/[Clojure 1.10.0-beta4]
+* https://repo1.maven.org/maven2/org/clojure/clojure/1.10.0-beta5/[Clojure 1.10.0-beta5]
 * https://search.maven.org/#search%7Cga%7C1%7Cg%3A%22org.clojure%22%20AND%20a%3A%22clojure%22%20AND%20v%3A1.10.0*[Clojure 1.10 pre-release builds]
 * <<devchangelog#,Dev changelog>>
-* Requirements: Java 1.8+
+* Requirements: Java 8 or higher (recommended: Java 8 or Java 11)
 
 == Clojure Source
 
