Add Map to Java collection list

--- a/content/reference/data_structures.adoc
+++ b/content/reference/data_structures.adoc
@@ -26,7 +26,7 @@ Clojure has a rich set of data structures. They share a set of properties:
 ** Support persistent manipulation.
 ** Support metadata
 ** Implement java.lang.Iterable
-** Implement the non-optional (read-only) portion of java.util.Collection
+** Implement the non-optional (read-only) portion of java.util.Collection or java.util.Map
 
 [[nil]]
 == nil
