--- a/content/reference/repl_and_main.adoc
+++ b/content/reference/repl_and_main.adoc
@@ -35,7 +35,7 @@ The `clojure.main/main` entry point accepts a variety of arguments and flags.
 * operation:
 ** Establishes thread-local bindings for commonly set!-able vars
 ** Enters the user namespace
-** Binds \*command-line-args* to a seq of strings containing command line args that appear after any main option
+** Binds `pass:[*command-line-args*]` to a seq of strings containing command line args that appear after any main option
 ** Runs all init options in order
 ** Runs a repl or script if requested
 
@@ -69,7 +69,7 @@ operation:
 
 - Establishes thread-local bindings for commonly set!-able vars
 - Enters the user namespace
-- Binds *command-line-args* to a seq of strings containing command line
+- Binds `pass:[*command-line-args*]` to a seq of strings containing command line
 args that appear after any main option
 - Runs all init options in order
 - Runs a repl or script if requested
