--- a/content/community/training.adoc
+++ b/content/community/training.adoc
@@ -24,6 +24,7 @@ UK: +44 20 3289 3277 +
 helpdesk@starweaver.com
 | Peter Taoussanis | Europe | Enterprise Clojure | https://www.taoensso.com | ptaoussanis@taoensso.com
 | Adam Bard | North America | Clojure Training | http://clojuretraining.ca | learnclojure@adambard.com
+| Mark Engelberg | North America (west coast) | Customized Training | https://www.linkedin.com/in/mark-engelberg-0a09a88a/ | mark.engelberg@gmail.com
 |===
 
 
