--- a/content/community/devchangelog.adoc
+++ b/content/community/devchangelog.adoc
@@ -11,6 +11,10 @@ The official https://github.com/clojure/clojure/blob/master/changes.md[changelog
 
 == Release 1.10
 
+=== 1.10.0-RC2 (Nov 26, 2018)
+
+No changes other than changelog updates.
+
 === 1.10.0-beta8 (Nov 21, 2018)
 
 * https://dev.clojure.org/jira/browse/CLJ-CLJ-2438[CLJ-2438] - demunge source location in execution error messages
