--- a/content/community/downloads.adoc
+++ b/content/community/downloads.adoc
@@ -14,9 +14,9 @@ ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 * https://github.com/clojure/clojure/blob/master/changes.md[Changelog]
 * Requirements: Java 6 or higher (recommended: Java 8 or Java 11)
 
-== Development Release: 1.10.0-beta8 (Nov 21, 2018)
+== Development Release: 1.10.0-RC2 (Nov 26, 2018)
 
-* https://repo1.maven.org/maven2/org/clojure/clojure/1.10.0-beta8/[Clojure 1.10.0-beta8]
+* https://repo1.maven.org/maven2/org/clojure/clojure/1.10.0-RC2/[Clojure 1.10.0-RC2]
 * https://search.maven.org/#search%7Cga%7C1%7Cg%3A%22org.clojure%22%20AND%20a%3A%22clojure%22%20AND%20v%3A1.10.0*[Clojure 1.10 pre-release builds]
 * <<devchangelog#,Dev changelog>>
 * Requirements: Java 8 or higher (recommended: Java 8 or Java 11)
