--- a/content/community/devchangelog.adoc
+++ b/content/community/devchangelog.adoc
@@ -11,6 +11,11 @@ The official https://github.com/clojure/clojure/blob/master/changes.md[changelog
 
 == Release 1.10
 
+=== 1.10.0-RC3 (Dec 3, 2018)
+
+* https://dev.clojure.org/jira/browse/CLJ-2447[CLJ-2447] - clojure.datafy docstring is missing
+* https://dev.clojure.org/jira/browse/CLJ-2448[CLJ-2448] - change name of async-require to serialized-require
+
 === 1.10.0-RC2 (Nov 26, 2018)
 
 No changes other than changelog updates.
