--- a/content/community/devchangelog.adoc
+++ b/content/community/devchangelog.adoc
@@ -9,11 +9,13 @@ ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 
 The official https://github.com/clojure/clojure/blob/master/changes.md[changelog] tracks deltas between major stable versions. This page gathers the interim dev release announcements during development. 
 
-== Naming guide
+== Dev release naming guide
 
-* Alpha - new feature work and enhancements still in development
-* Beta - new feature work for the release is complete, fixing bugs only
-* RC - a release candidate, which will be released as a final release unless a critical issue is found
+* Alpha - new feature work and enhancements in development
+* Beta - bug fixing only, no new feature work is expected
+* RC - a release candidate, which will be released as a final release unless critical issues are found
+
+Note: All dev releases are subject to breaking changes for new work since the prior release.
 
 == Release 1.10
 
